# file-sync

./: .env.dev.example  .env.example  .gitignore  .prettierignore  CHANGELOG.md  Caddyfile  README.md  bunfig.toml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  eslint.config.ts  package.json  tsconfig.base.json
.githooks/: pre-commit
.github/workflows/: ci.yml
apps/caddy/: Dockerfile
apps/desktop/: hey-api.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  globals.css  main.tsx  vite.d.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  tray.rs  watcher.rs
apps/desktop/src/components/: ConnectionStatus.tsx  FolderIconPicker.tsx  HealthCheck.tsx  NotificationBell.tsx  RemoteReleaseDetail.tsx  Sidebar.tsx  SidebarUpdate.tsx  UpdateBanner.tsx
apps/desktop/src/hooks/: use-conflict-count.ts
apps/desktop/src/i18n/: index.ts
apps/desktop/src/lib/: api-client.ts  device-info.ts  fetch-with-auth.ts  log-entry-cache.ts  log-parse.ts  (+5 more)
apps/server/: Dockerfile  drizzle.config.ts  package.json  tsconfig.json
apps/server/src/: app.ts  index.ts
apps/web/: Dockerfile  README.md  index.html  nginx.conf  openapi-ts.config.js  package.json  tsconfig.json  vite.config.ts
apps/web/src/: globals.css  main.tsx  vite-environment.d.ts
docs/: deploy-portainer-ubuntu.md  handoff.md  plan.md  user-manual.md
scripts/: setup.ps1  setup.sh
(+152 files in other folders)
