[package]
name = "file-sync-desktop"
version = "1.2.3"
description = "FileSync Desktop App"
authors = []
edition = "2021"
rust-version = "1.88"

[lib]
name = "file_sync_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "file-sync-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# The self-updater and autostart crates are only built for desktop targets (not iOS/Android).
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
